--- a/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-saml-guide.mdx
@@ -12,21 +12,27 @@ This guide walks through configuring Microsoft Entra ID (formerly known as Azure
 
 ## Setup
 
-SAML-based SSO setup has two main steps:
+<SAMLSetupSteps idp="Entra ID enterprise application" />
 
-1. Create an enterprise application for Apollo GraphOS in Entra ID.
-2. Send your Entra ID's application's SAML metadata to Apollo.
+### Prerequisites
 
-Setup requires at least a [Cloud Application Administrator](https://learn.microsoft.com/en-us/entra/identity/role-based-access-control/permissions-reference#cloud-application-administrator) role.
+Setup requires:
 
-### Step 1. Create an enterprise application
+- An Entra ID user account with at least the [Cloud Application Administrator](https://learn.microsoft.com/en-us/entra/identity/role-based-access-control/permissions-reference#cloud-application-administrator) role
+- A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
 
-<SSOSAMLInfoRequest />
+<!-- vale Apollo.Headings = NO -->
 
-2. Go to your [Microsoft Entra admin center](https://entra.microsoft.com/). Alternatively, you can sign in to the [Azure Portal](http://portal.azure.com/) and then navigate to **Microsoft Entra ID**.
-3. Go to **Identity > Applications > Enterprise applications** and select **+New application** in the top menu.
-4. In the top menu, select **+Create your own application**.
-5. Enter `Apollo GraphOS` as the name of your app. Below, keep the **Integrate any other application you don't find in the gallery (Non-gallery)** option selected. Click **Create**.
+### Step 1. Enter your SSO details
+
+<SSOShareDetails type="SAML" />
+
+### Step 2. Create an Entra ID enterprise application
+
+1. Once you reach **Step 2: Your IdP and Apollo** in the wizard, go to your [Microsoft Entra admin center](https://entra.microsoft.com/). Alternatively, you can sign in to the [Azure Portal](http://portal.azure.com/) and then go to **Microsoft Entra ID**.
+2. Go to **Identity > Applications > Enterprise applications** and select **+New application** in the top menu.
+3. In the top menu, select **+Create your own application**.
+4. Enter `Apollo GraphOS` as the name of your app. Below, keep the **Integrate any other application you don't find in the gallery (Non-gallery)** option selected. Click **Create**.
 
    <img
      src="../../img/sso/entra-create-application.jpg"
@@ -35,16 +41,16 @@ Setup requires at least a [Cloud Application Administrator](https://learn.micros
      width="450"
    />
 
-6. On the app's **Overview** page, select **2. Set up single sign-on**. You'll assign users and groups later.
-7. On the app's **Single sign-on** page, select **SAML** as the single sign-on method.
-8. At the top of the **SAML-based Sign-on** page, click **Upload metadata file** and upload the file provided by your Apollo contact. Alternatively, you can enter these values manually in the **Basic SAML Configuration** section:
+5. On the app's **Overview** page, select **2. Set up single sign-on**. You'll assign users and groups later.
+6. On the app's **Single sign-on** page, select **SAML** as the single sign-on method.
+7. At the top of the **SAML-based Sign-on** page, click **Upload metadata file** and upload the file provided by the GraphOS setup wizard. Alternatively, you can enter these values manually in the **Basic SAML Configuration** section:
 
-   - **Identifier (Entity ID)**: Entity ID value provided by Apollo
-   - **Reply URL (Assertion Consumer Service URL)**: Single Sign-on URL provided by Apollo
+   - **Identifier (Entity ID)**: Entity ID value provided by the setup wizard
+   - **Reply URL (Assertion Consumer Service URL)**: Single Sign-on URL provided by the setup wizard
 
    Click **Save**.
 
-9. In **Attributes & Claims**, ensure the following claim **names** have the corresponding **source attributes**:
+8. In **Attributes & Claims**, ensure the following claim **names** have the corresponding **source attributes**:
 
    - `email`: `user.mail`
    - `given_name`: `user.givenname`
@@ -69,7 +75,7 @@ Setup requires at least a [Cloud Application Administrator](https://learn.micros
      width="450"
    />
 
-10. Under **SAML Certificates**, copy the **App Federation Metadata URL** into a text file for the next step.
+9. Under **SAML Certificates**, copy the **App Federation Metadata URL** into a text file for the next step.
 
 <img
   src="../../img/sso/entra-saml-certificates.jpg"
@@ -78,12 +84,30 @@ Setup requires at least a [Cloud Application Administrator](https://learn.micros
   width="700"
 />
 
-### Step 2. Send SAML metadata to Apollo
+10. In the setup wizard in GraphOS Studio, select whether your Entra implementation requires signing an AuthnRequest.
+11. Click **Continue**..
 
-Send your Apollo contact the **App Federation Metadata URL** you previously copied.
-They will then be able to complete your SSO setup.
+### Step 3. Share SAML metadata with Apollo
 
-Once your SSO setup is finalized, you need to assign users to your GraphOS app in Entra.
+In the setup wizard, enter the **App Federation Metadata URL** you previously copied into the **Upload metadata from URL** field.
+Click **Continue**.
+
+### Step 4. Verify details
+
+The GraphOS Studio setup wizard populates your SSO metadata based on the URL you entered in the last step. Verify the values are correct.
+
+You can find them in Entra ID, **Identity > Applications > Enterprise applications**, in the application you created for GraphOS.
+
+- Your application's **Entity ID** is in the **Single sign-on** tab. Scroll down to the **Basic SAML Configuration** section and look for a field labeled **Identifier (Entity ID)**. This field contains the Entity ID. It has the following format: `urn:<unique>.<region>.auth0.com`.
+- The **SSO URL** is also in thee **Basic SAML Configuration** section in the **Sign on URL** field.
+
+Once you've verified the values or corrected them, click **Continue**.
+
+### Step 5. Enable SSO
+
+<!-- vale Apollo.Headings = YES -->
+
+<SSOLegacyUsers idp="Entra ID" appType="enterprise application" />
 
 ## Assign users in Entra ID
 
