Update Premium callout for self-service pages

--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -105,7 +105,7 @@ Once your SSO is set up, you need to assign users to it so they can access Graph
 Repeat these steps whenever you want to grant GraphOS Studio access to a new user or group.
 Okta displays every user and group you've assigned to the integration in the **Assignments** tab.
 
-<SSOLegacyUsers />
+<SSOLegacyUsers idp="Okta" />
 
 Once you've confirmed the new configuration works as expected, remove any legacy Apollo integrations in Okta if you have them.
 
