--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -4,7 +4,13 @@ subtitle: Configure an OIDC-based identity provider
 description: Configure a OpenID Connect (OIDC) based identity provider as your Apollo GraphOS organization's SSO provider.
 ---
 
-<SSOPremiumFeature />
+<PremiumFeature>
+
+Self-service single sign-on (SSO) is available only for organizations with Dedicated and Enterprise plans who previously set up their SSO using PingOne and need to migrate.
+If you're unsure if you need to migrate please see the [Migration Guide](./migration#who-needs-to-migrate).
+If you are on a Dedicated or Enterprise plan and setting up SSO for the first time, please refer to [these instructions](../oidc-integration-guide).
+
+</PremiumFeature>
 
 This guide walks through configuring a generic OpenID Connect (OIDC) based identity provider (IdP) for use with Apollo SSO.
 If you use Microsoft Entra ID as your IdP, instead see [the Entra OIDC guide](./microsoft-entra-id-integration-oidc-guide/).
