--- a/src/content/graphos/org/sso/self-service/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/okta-integration-guide.mdx
@@ -4,7 +4,13 @@ subtitle: Configure Okta as your GraphOS organization's identity provider
 description: Configure Okta as your Apollo GraphOS organization's SSO provider with this SAML setup guide.
 ---
 
-<SSOPremiumFeature />
+<PremiumFeature>
+
+Self-service single sign-on (SSO) is available only for organizations with Dedicated and Enterprise plans who previously set up their SSO using PingOne and need to migrate.
+If you're unsure if you need to migrate please see the [Migration Guide](./migration#who-needs-to-migrate).
+If you are on a Dedicated or Enterprise plan and setting up SSO for the first time, please refer to [these instructions](../saml-integration-guide).
+
+</PremiumFeature>
 
 This guide walks through configuring Okta as your GraphOS organization's identity provider (IdP) for SAML-based SSO. Once you've set up your integration, you need to assign users to it in Okta so they can access GraphOS Studio via SSO.
 
