--- a/src/content/shared/sso-legacy-caution.mdx
+++ b/src/content/shared/sso-legacy-caution.mdx
@@ -2,7 +2,7 @@
 
 The below instructions are provided for reference only. Beginning in April 2024, Apollo recommends that all organizations use the [updated instructions](#setup) to create a new SSO connection.
 
-To use [multi-organization SSO](./multi-organization), your SSO connection cannot use PingOne as shown in the legacy instructions below.
+To use [multi-organization SSO](/graphos/org/sso/multi-organization), your SSO connection cannot use PingOne as shown in the legacy instructions below.
 Follow the [updated instructions](#setup) to create a new SSO connection.
 
 </Note>
