--- a/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
@@ -4,21 +4,13 @@ subtitle: Configure a SAML-based identity provider
 description: Configure a SAML-based identity provider as your Apollo GraphOS organization's SSO provider.
 ---
 
-<PremiumFeature>
-
-Self-service single sign-on (SSO) is available only for organizations with Dedicated and Enterprise plans who previously set up their SSO using PingOne and need to migrate.
-If you're unsure if you need to migrate please see the [Migration Guide](./migration#who-needs-to-migrate).
-If you are on a Dedicated or Enterprise plan and setting up SSO for the first time, please refer to [these instructions](../saml-integration-guide).
-
-</PremiumFeature>
+<SSOPremiumFeature />
 
 This guide walks through configuring a generic SAML-based identity provider (IdP) for use with Apollo SSO.
 If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding guide for your IdP:
 
 - [Okta](./okta-integration-guide/)
 - [Microsoft Entra ID](./microsoft-entra-id-integration-saml-guide/) (formerly known as Azure Active Directory)
-
-<SSOMigrationNotice />
 
 ## Setup
 
