Fix images in self-serve

--- a/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-oidc-guide.mdx
@@ -103,7 +103,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
    - Leave **Redirect URI** empty. You'll provide this information later.
 
    <img
-     src="../../img/sso/azure-app-registration.gif"
+     src="../../../img/sso/azure-app-registration.gif"
      alt="Azure App Registration"
      className="screenshot"
    />
@@ -117,7 +117,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
 3. Copy and paste the **OpenID Connect metadata document** URL into the same local text file:
 
    <img
-     src="../../img/sso/azure-client-id-endpoint.gif"
+     src="../../../img/sso/azure-client-id-endpoint.gif"
      alt="Azure endpoint URL and client ID"
      className="screenshot"
    />
@@ -129,7 +129,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
 2. Copy and paste the secret's **Value** field to the same text file you created earlier:
 
    <img
-     src="../../img/sso/azure-client-secret.gif"
+     src="../../../img/sso/azure-client-secret.gif"
      alt="Azure client secret"
      className="screenshot"
    />
@@ -146,7 +146,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
 2. Also from the **API Permissions** section, select **Grant admin consent** next to the **+ Add a permission** button. This ensures your users don't need to grant consent during SSO.
 
    <img
-     src="../../img/sso/azure-configure-api-permissions.gif"
+     src="../../../img/sso/azure-configure-api-permissions.gif"
      alt="Azure configure API permissions"
      className="screenshot"
    />
@@ -156,7 +156,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
 4. **Save** your changes.
 
    <img
-     src="../../img/sso/azure-manifest.png"
+     src="../../../img/sso/azure-manifest.png"
      alt="Azure manifest"
      className="screenshot"
    />
@@ -174,7 +174,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
    4. Click **Next**.
 
    <img
-     src="../../img/sso/azure-pingone-connection.gif"
+     src="../../../img/sso/azure-pingone-connection.gif"
      alt="Azure PingOne connection"
      className="screenshot"
    />
@@ -186,7 +186,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
    - Back on the PingOne configuration wizard, select **Next** after copying and pasting the URI.
 
    <img
-     src="../../img/sso/azure-pingone-redirect-uri.gif"
+     src="../../../img/sso/azure-pingone-redirect-uri.gif"
      alt="Azure PingOne redirect URI"
      className="screenshot"
    />
@@ -214,7 +214,7 @@ After you successfully configure the identity bridge between Azure AD and PingOn
    </Note>
 
    <img
-     src="../../img/sso/azure-oidc-application.gif"
+     src="../../../img/sso/azure-oidc-application.gif"
      alt="PingOne OIDC application"
      className="screenshot"
    />
