--- a/src/content/graphos/org/sso/self-service/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/okta-integration-guide.mdx
@@ -47,7 +47,7 @@ Setup requires:
 3. In the dialog that appears, select **SAML 2.0** as your sign-in method. Click **Next**.
 
    <img
-     src="../../img/sso/okta-create-app-integration.jpg"
+     src="../../../img/sso/okta-create-app-integration.jpg"
      alt="Okta create app integration modal"
      className="screenshot"
      width="700"
@@ -56,10 +56,10 @@ Setup requires:
 4. The **Create SAML Integration** dialog appears. In the **General Settings** step, provide the following values:
 
    - **App name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.jpg) (optional)
+   - **App logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.jpg) (optional)
 
    <img
-     src="../../img/sso/okta-create-saml-integration.jpg"
+     src="../../../img/sso/okta-create-saml-integration.jpg"
      alt="Okta create SAML integration step"
      className="screenshot"
      width="700"
@@ -83,7 +83,7 @@ Setup requires:
    - `family_name`: `user.lastName`
 
    <img
-     src="../../img/sso/okta-attribute-statements.jpg"
+     src="../../../img/sso/okta-attribute-statements.jpg"
      alt="Okta configure attributes statements"
      className="screenshot"
      width="700"
@@ -100,7 +100,7 @@ Setup requires:
 1. In your Okta Administrator Dashboard, go to the **Sign On > Settings > SAML 2.0 > Metadata details** section in the app integration you just created.
 
    <img
-     src="../../img/sso/okta-metadata-url.jpg"
+     src="../../../img/sso/okta-metadata-url.jpg"
      alt="Okta settings"
      className="screenshot"
      width="500"
@@ -118,7 +118,7 @@ You can find them in your Okta Administrator Dashboard in the app integration yo
 - The **SSO URL** is also in the **SAML 2.0** section in a field labeled **Sign on URL**.
 
 <img
-  src="../../img/sso/okta-verify-details.jpg"
+  src="../../../img/sso/okta-verify-details.jpg"
   alt="Okta SSO details"
   className="screenshot"
   width="500"
@@ -139,7 +139,7 @@ Once your SSO is set up, you need to assign users to it so they can access Graph
 1. From your Okta Administrator Dashboard, open the **Applications** view from the left menu and open the Apollo GraphOS integration. Then, click the **Assignments** tab.
 
    <img
-     src="../../img/sso/okta-assignments.jpg"
+     src="../../../img/sso/okta-assignments.jpg"
      alt="GraphOS Studio Okta integration assignment settings"
      class="screenshot"
    />
@@ -176,7 +176,7 @@ You can use Okta's [Bookmark App integration](#add-apollo-graphos-as-a-bookmark-
 1. From your Okta Administrator Dashboard, open the **Applications** view from the left menu. Click **Browse App Catalog**.
 
    <img
-     src="../../img/sso/okta-browse-catalog.jpg"
+     src="../../../img/sso/okta-browse-catalog.jpg"
      alt="Okta Application screen"
      className="screenshot"
    />
@@ -185,7 +185,7 @@ You can use Okta's [Bookmark App integration](#add-apollo-graphos-as-a-bookmark-
 3. In the **General Settings** tab that opens, select **Do not display application icon to users**. (You'll [set up a Bookmark App](#add-apollo-graphos-as-a-bookmark-app) instead.) You can optionally change the **Application label** or keep the default "Apollo GraphOS Enterprise" label. Click **Done**.
 
    <img
-     src="../../img/sso/okta-hide-integration.jpg"
+     src="../../../img/sso/okta-hide-integration.jpg"
      alt="GraphOS Studio Okta integration general settings"
      className="screenshot"
      width="750"
@@ -194,7 +194,7 @@ You can use Okta's [Bookmark App integration](#add-apollo-graphos-as-a-bookmark-
 4. The **Assignments** tab opens—you'll return to it later to [assign users](#assign-users-in-okta) to the integration. For now, open the **Sign On** tab and copy the **Metadata URL** under **Metadata details**.
 
 <img
-  src="../../img/sso/okta-metadata-url.jpg"
+  src="../../../img/sso/okta-metadata-url.jpg"
   alt="GraphOS Studio Okta integration sign on settings"
   className="screenshot"
   width="750"
@@ -218,7 +218,7 @@ Beginning in April 2024, Apollo recommends using the updated instructions for [c
 2. Click **Create App Integration**. The following dialog appears:
 
    <img
-     src="../../img/sso/okta-create-app-integration.jpg"
+     src="../../../img/sso/okta-create-app-integration.jpg"
      alt="Okta create app integration modal"
      className="screenshot"
    />
@@ -233,10 +233,10 @@ The **Create SAML Integration** dialog includes multiple steps:
 1. In the **General Settings** step, provide the following values:
 
    - **App name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.jpg) (optional)
+   - **App logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.jpg) (optional)
 
    <img
-     src="../../img/sso/okta-create-saml-integration.jpg"
+     src="../../../img/sso/okta-create-saml-integration.jpg"
      alt="Okta create SAML integration step"
      className="screenshot"
    />
@@ -258,7 +258,7 @@ The **Create SAML Integration** dialog includes multiple steps:
    - **Default RelayState**: `https://pingone.com/1.0/fd76e619-6c0a-461c-912d-418278929d60`
 
    <img
-     src="../../img/sso/okta-configure-saml.jpg"
+     src="../../../img/sso/okta-configure-saml.jpg"
      alt="Okta configure SAML"
      className="screenshot"
    />
@@ -272,7 +272,7 @@ The **Create SAML Integration** dialog includes multiple steps:
    - `family_name`: `user.lastName`
 
    <img
-     src="../../img/sso/okta-attribute-statements.jpg"
+     src="../../../img/sso/okta-attribute-statements.jpg"
      alt="Okta configure attributes statements"
      className="screenshot"
    />
@@ -284,7 +284,7 @@ The **Create SAML Integration** dialog includes multiple steps:
    - Select **I'm an Okta customer adding an internal app**.
 
    <img
-     src="../../img/sso/okta-feedback.jpg"
+     src="../../../img/sso/okta-feedback.jpg"
      alt="Okta feedback"
      className="screenshot"
    />
@@ -296,7 +296,7 @@ The **Create SAML Integration** dialog includes multiple steps:
 1. From your new SAML integration's details page, scroll down and click **View SAML setup instructions** on the right side:
 
    <img
-     src="../../img/sso/okta-settings.jpg"
+     src="../../../img/sso/okta-settings.jpg"
      alt="Okta settings"
      className="screenshot"
    />
@@ -304,7 +304,7 @@ The **Create SAML Integration** dialog includes multiple steps:
 2. In the dialog that appears, copy and paste the contents of the **IDP metadata** text box into a text file:
 
    <img
-     src="../../img/sso/okta-idp-metadata.jpg"
+     src="../../../img/sso/okta-idp-metadata.jpg"
      alt="Okta IdP metadata"
      className="screenshot"
    />
