--- a/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-saml-guide.mdx
@@ -41,7 +41,7 @@ Setup requires:
 4. Enter `Apollo GraphOS` as the name of your app. Below, keep the **Integrate any other application you don't find in the gallery (Non-gallery)** option selected. Click **Create**.
 
    <img
-     src="../../img/sso/entra-create-application.jpg"
+     src="../../../img/sso/entra-create-application.jpg"
      alt="Application creation in Microsoft Entra ID"
      className="screenshot"
      width="450"
@@ -66,7 +66,7 @@ Setup requires:
    Otherwise, manually enter them.
 
    <img
-     src="../../img/sso/entra-configuration-values.jpg"
+     src="../../../img/sso/entra-configuration-values.jpg"
      alt="Application creation in Microsoft Entra ID"
      className="screenshot"
      width="700"
@@ -75,7 +75,7 @@ Setup requires:
    Claims do not need a **Namespace**.
 
    <img
-     src="../../img/sso/entra-manage-claim.jpg"
+     src="../../../img/sso/entra-manage-claim.jpg"
      alt="Application creation in Microsoft Entra ID"
      className="screenshot"
      width="450"
@@ -84,7 +84,7 @@ Setup requires:
 9. Under **SAML Certificates**, copy the **App Federation Metadata URL** into a text file for the next step.
 
 <img
-  src="../../img/sso/entra-saml-certificates.jpg"
+  src="../../../img/sso/entra-saml-certificates.jpg"
   alt="Application creation in Microsoft Entra ID"
   className="screenshot"
   width="700"
@@ -142,7 +142,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
    - Leave **Redirect URI** empty. You'll provide this information later.
 
    <img
-     src="../../img/sso/azure-app-registration.gif"
+     src="../../../img/sso/azure-app-registration.gif"
      alt="Azure App Registration"
      className="screenshot"
    />
@@ -156,7 +156,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
 3. Copy and paste the **OpenID Connect metadata document** URL into the same local text file:
 
    <img
-     src="../../img/sso/azure-client-id-endpoint.gif"
+     src="../../../img/sso/azure-client-id-endpoint.gif"
      alt="Azure endpoint URL and client ID"
      className="screenshot"
    />
@@ -168,7 +168,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
 2. Copy and paste the secret's **Value** field to the same text file you created earlier:
 
    <img
-     src="../../img/sso/azure-client-secret.gif"
+     src="../../../img/sso/azure-client-secret.gif"
      alt="Azure client secret"
      className="screenshot"
    />
@@ -185,7 +185,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
 2. Also from the **API Permissions** section, select **Grant admin consent** next to the **+ Add a permission** button. Doing this ensures that your users don't need to grant consent during SSO.
 
    <img
-     src="../../img/sso/azure-configure-api-permissions.gif"
+     src="../../../img/sso/azure-configure-api-permissions.gif"
      alt="Azure configure API permissions"
      className="screenshot"
    />
@@ -195,7 +195,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
 4. **Save** your changes.
 
    <img
-     src="../../img/sso/azure-manifest.png"
+     src="../../../img/sso/azure-manifest.png"
      alt="Azure manifest"
      className="screenshot"
    />
@@ -213,7 +213,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
    4. Click **Next**.
 
    <img
-     src="../../img/sso/azure-pingone-connection.gif"
+     src="../../../img/sso/azure-pingone-connection.gif"
      alt="Azure PingOne connection"
      className="screenshot"
    />
@@ -225,7 +225,7 @@ These steps use PingOne's email invite method, because in some cases Apollo's le
    - Back on the PingOne configuration wizard, select **Next** after copying and pasting the URI.
 
    <img
-     src="../../img/sso/azure-pingone-redirect-uri.gif"
+     src="../../../img/sso/azure-pingone-redirect-uri.gif"
      alt="Azure PingOne redirect URI"
      className="screenshot"
    />
@@ -253,7 +253,7 @@ After you successfully configure the identity bridge between Azure AD and PingOn
    </Note>
 
    <img
-     src="../../img/sso/azure-oidc-application.gif"
+     src="../../../img/sso/azure-oidc-application.gif"
      alt="PingOne OIDC application"
      className="screenshot"
    />
