--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -47,7 +47,7 @@ Setup requires:
 2. Create a new application in your SSO environment. While doing so, set the following values:
 
    - **App Name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
+   - **App logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.png) (optional)
 
 3. Retrieve the following values from your SSO provider and enter them in the setup wizard.
 
