Copyedit migration notice

--- a/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-oidc-guide.mdx
@@ -8,7 +8,7 @@ description: Configure Microsoft Entra ID (formerly Azure AD) as your Apollo Gra
 
 Self-service single sign-on (SSO) is available only for organizations with Dedicated and Enterprise plans who previously set up their SSO using PingOne and need to migrate.
 If you're unsure if you need to migrate please see the [Migration Guide](./migration#who-needs-to-migrate).
-If you are on a Dedicated or Enterprise plan and setting up SSO for the first time, please refer to [these instructions](../microsoft-entra-id-integration-oidc-guide).
+If you are setting up SSO for the first time, please refer to [these instructions](../microsoft-entra-id-integration-oidc-guide).
 
 </PremiumFeature>
 
