--- a/src/content/graphos/org/sso/self-service/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/okta-integration-guide.mdx
@@ -6,9 +6,9 @@ description: Configure Okta as your Apollo GraphOS organization's SSO provider w
 
 <PremiumFeature>
 
-Self-service single sign-on (SSO) is available only for organizations with Dedicated and Enterprise plans who previously set up their SSO using PingOne and need to migrate.
+Self-service single sign-on (SSO) is available only for organizations with Dedicated and Enterprise plans who set up SSO with PingOne and need to migrate.
 If you're unsure if you need to migrate please see the [Migration Guide](./migration#who-needs-to-migrate).
-If you are on a Dedicated or Enterprise plan and setting up SSO for the first time, please refer to [these instructions](../saml-integration-guide).
+If you're setting up SSO for the first time, please refer to [these instructions](../okta-integration-guide).
 
 </PremiumFeature>
 
