--- a/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/microsoft-entra-id-integration-saml-guide.mdx
@@ -6,7 +6,7 @@ description: Configure Microsoft Entra ID (formerly Azure AD) as your Apollo Gra
 
 <PremiumFeature>
 
-Self-service single sign-on (SSO) is available only for organizations with Dedicated and Enterprise plans who previously set up their SSO using PingOne and need to migrate.
+Self-service single sign-on (SSO) is only available for organizations with Dedicated and Enterprise plans who previously set up their SSO using PingOne and need to migrate.
 If you're unsure if you need to migrate please see the [Migration Guide](./migration#who-needs-to-migrate).
 If you are setting up SSO for the first time, please refer to [these instructions](../microsoft-entra-id-integration-saml-guide).
 
