--- a/src/content/graphos/org/sso/self-service/migration.mdx
+++ b/src/content/graphos/org/sso/self-service/migration.mdx
@@ -4,7 +4,7 @@ subtitle: Learn who needs to migrate, what's changing, and how to migrate
 noIndex: true
 ---
 
-GraphOS has a new single sign-on (SSO) system. Enterprise organizations that set up their SSO with the legacy implementation must migrate before November 15, 2024. After that date, the legacy implementation will no longer work, and your organization will lose access to GraphOS.
+GraphOS has a new self-service single sign-on (SSO) system. Enterprise organizations that set up their SSO with the legacy implementation must migrate before November 15, 2024. After that date, the legacy implementation will no longer work, and your organization will lose access to GraphOS.
 
 ## Who needs to migrate?
 
@@ -23,11 +23,11 @@ The new SSO implementation is now directly integrated into the GraphOS authentic
 
 To migrate, a GraphOS [Org Admin](../members/#organization-wide-member-roles) must create a new SSO configuration and remove the legacy configuration. For details, see the instructions for your identity provider:
 
-- [Okta (SAML-based)](./okta-integration-guide/)
+- [Self-service Okta (SAML-based)](./okta-integration-guide/)
 - Microsoft Entra ID (formerly known as Azure Active Directory)
-  - [SAML-based](./microsoft-entra-id-integration-saml-guide)
-  - [OIDC-based](./microsoft-entra-id-integration-oidc-guide)
-- [Generic SAML](./saml-integration-guide/)
-- [Generic OIDC](./oidc-integration-guide/)
+  - [Self-service SAML-based](./microsoft-entra-id-integration-saml-guide)
+  - [Self-service OIDC-based](./microsoft-entra-id-integration-oidc-guide)
+- [Self-service Generic SAML](./saml-integration-guide/)
+- [Self-service Generic OIDC](./oidc-integration-guide/)
 
 Don't hesitate to reach out to your Apollo contact email [support@apollographql.com](mailto:support@apollographql.com) if you have any questions or need assistance.
